# lcolamps

./: CHANGELOG.md  README.md  pyproject.toml  readthedocs.yml
.github/workflows/: release.yml  test.yml
docs/: conf.py
lcolamps/: __init__.py  __main__.py  actor.py  commands.py  controller.py  lamps.py
lcolamps/etc/: lcolamps.yaml  schema.json
tests/: conftest.py  test_lcolamps.py
