[tool.poetry]
name = "sdss-lcolamps"
version = "1.0.1"
description = "A library to control the LCO M2 lamps."
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/lcolamps"
repository = "https://github.com/sdss/lcolamps"
documentation = "https://sdss-lcolamps.readthedocs.io/en/latest/"
keywords = ["astronomy", "software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "lcolamps" }
]
include = [
    {path = "lcolamps/etc/*"},
]

[tool.poetry.scripts]
lcolamps = "lcolamps.__main__:lcolamps"

[tool.poetry.dependencies]
python = "^3.10,<4"
sdss-clu = "^2.0.0"
sdsstools = "^1.6.0"
click_default_group = "^1.2.2"

[tool.poetry.dev-dependencies]
ipython = ">=8.0.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
black = ">=20.8b1"
ruff = ">=0.1.0"

[tool.black]
line-length = 88
target-version = ['py312']
fast = true

[tool.ruff]
line-length = 88
target-version = 'py312'
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403", "E402", "F401"]

[tool.ruff.isort]
known-first-party = ["lcolamps"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu"]

[tool.pytest.ini_options]
addopts = "--cov lcolamps --cov-report xml --cov-report html --cov-report term"

[tool.coverage.run]
branch = true
include = ["lcolamps/*"]
omit = [
    "*/__init__.py",
    "lcolamps/__main__.py",
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
